--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "start": "node script.mjs"
   },
   "dependencies": {
-    "express": "^4.21.2",
-    "pg": "^8.14.0"
+    "express": "4.21.2",
+    "pg": "8.14.0"
   }
 }
