--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "node script.mjs"
+    "start": "node script.mjs",
+    "local": "node --env-file=.env data/db.mjs"
   },
   "dependencies": {
     "express": "4.21.2",
